[package]
name = "tansu-schema-registry"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
bytes.workspace = true
jsonschema.workspace = true
object_store.workspace = true
protobuf-parse.workspace = true
protobuf.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-kafka-sans-io = { path = "../tansu-kafka-sans-io" }
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
protobuf-json-mapping.workspace = true
tracing-subscriber.workspace = true

# [lints]
# workspace = true
