[package]
name = "tansu-schema"
description = "Avro, JSON and Protocol buffer validation with conversion to Apache Iceberg, Delta Lake or Parquet via Apache Arrow"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

include = [
    "build.rs",
    "benches/*.rs",
    "src/**/*.rs",
    "src/**/*.proto",
    "src/**/*.avsc",
    "src/**/*.json",
    "tests",
    "Cargo.toml",
    "LICENSE",
]


[lints]
workspace = true

[dependencies]
anyhow.workspace = true
apache-avro.workspace = true
arrow.workspace = true
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
datafusion.workspace = true
delta_kernel.workspace = true
deltalake.workspace = true
dotenv.workspace = true
fake.workspace = true
futures.workspace = true
governor.workspace = true
iceberg-catalog-rest.workspace = true
iceberg-datafusion.workspace = true
iceberg.workspace = true
jsonschema.workspace = true
num-bigint.workspace = true
object_store.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
ordered-float.workspace = true
parquet.workspace = true
protobuf-json-mapping.workspace = true
protobuf-parse.workspace = true
protobuf.workspace = true
rand.workspace = true
rhai-rand.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-sans-io.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true
