[package]
name = "tansu-schema"
description = "Avro, JSON and Protocol buffer validation with conversion to Apache Iceberg, Delta Lake or Parquet via Apache Arrow"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[features]
delta = ["dep:arrow", "dep:delta_kernel", "dep:deltalake", "dep:datafusion", "dep:parquet"]
iceberg = ["dep:arrow", "dep:iceberg-catalog-rest", "dep:iceberg-datafusion", "dep:iceberg", "dep:datafusion", "dep:parquet"]
parquet = ["dep:arrow", "dep:parquet"]


[lints]
workspace = true

[dependencies]
anyhow.workspace = true
apache-avro.workspace = true
arrow = { workspace = true, optional = true }
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
datafusion = { workspace = true, optional = true }
delta_kernel = { workspace = true, optional = true }
deltalake = { workspace = true, optional = true }
dotenv.workspace = true
fake.workspace = true
futures.workspace = true
governor.workspace = true
iceberg-catalog-rest = { workspace = true, optional = true }
iceberg-datafusion = { workspace = true, optional = true }
iceberg = { workspace = true, optional = true }
jsonschema.workspace = true
num-bigint.workspace = true
object_store.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
ordered-float.workspace = true
parquet = { workspace = true, optional = true }
protobuf-json-mapping.workspace = true
protobuf-parse.workspace = true
protobuf.workspace = true
rand.workspace = true
rhai-rand.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-sans-io.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rand.workspace = true

[[test]]
name = "berg"
required-features = ["iceberg"]
