[package]
name = "tansu-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
deadpool-postgres.workspace = true
digest.workspace = true
futures.workspace = true
opentelemetry-jaeger.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
rsasl.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tansu-kafka-model = { path = "../tansu-kafka-model" }
tansu-kafka-sans-io = { path = "../tansu-kafka-sans-io" }
tansu-raft = { path = "../tansu-raft" }
tansu-storage = { path = "../tansu-storage" }
tarpc.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
typetag.workspace = true
ulid.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
nightly-features = []
