[package]
name = "tansu-server"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

# [lints]
# workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true
hyper.workspace = true
jsonschema.workspace = true
object_store.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-model = { path = "../tansu-model" }
tansu-kafka-sans-io = { path = "../tansu-kafka-sans-io" }
tansu-schema-registry = { path = "../tansu-schema-registry" }
tansu-storage = { path = "../tansu-storage" }
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[features]
default = []
nightly-features = []
