[package]
name = "tansu-service"
edition.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
clap.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
rama.workspace = true
tansu-sans-io = { version = "0.4.1", path = "../tansu-sans-io" }
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
