[package]
name = "tansu-service"
description = "Tansu protocol services and layers"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
deadpool.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
rama.workspace = true
tansu-sans-io.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
