[package]
name = "tansu-storage"
description = "Storage abstraction for PostgreSQL and ObjectStore (S3 or memory)"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

include = [
    "build.rs",
    "benches/*.rs",
    "src/**/*.rs",
    "src/**/*.sql",
    "tests",
    "Cargo.toml",
    "LICENSE",
]


[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
deadpool-postgres.workspace = true
deadpool.workspace = true
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
glob.workspace = true
libsql.workspace = true
object_store.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry.workspace = true
protobuf.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tansu-sans-io.workspace = true
tansu-schema.workspace = true
thiserror.workspace = true
tokio-postgres.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
turso.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
time.workspace = true
tracing-subscriber.workspace = true
