[package]
name = "tansu-topic"
edition.workspace = true
version = "0.4.2"
license.workspace = true
repository.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
tansu-sans-io = { version = "0.4.2", path = "../tansu-sans-io" }
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
