[package]
name = "tansu-topic"
description = "Topic administration"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
futures-core.workspace = true
futures-util.workspace = true
futures.workspace = true
tansu-client.workspace = true
tansu-sans-io.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
