[package]
name = "tansu"
description = "Apache Kafka compatible broker with S3, PostgreSQL, Apache Iceberg and Delta Lake"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dotenv.workspace = true
tansu-broker.workspace = true
tansu-cli.workspace = true
tansu-sans-io.workspace = true
tokio.workspace = true
tracing.workspace = true
