[package]
name = "tansu"
description = "Apache Kafka compatible broker with S3, PostgreSQL, Apache Iceberg and Delta Lake"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
include.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
dotenv.workspace = true
tansu-broker = { workspace = true, default-features = false, optional = true }
tansu-cat.workspace = true
tansu-cli = { workspace = true, default-features = false, optional = true }
tansu-generator.workspace = true
tansu-perf.workspace = true
tansu-proxy.workspace = true
tansu-sans-io.workspace = true
tansu-schema = { workspace = true, default-features = false, optional = true }
tansu-storage = { workspace = true, default-features = false, optional = true }
tansu-topic.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
default = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage"]
delta = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-cli/delta", "tansu-schema/delta"]
dynostore = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-broker/dynostore", "tansu-cli/dynostore", "tansu-storage/dynostore"]
iceberg = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-cli/iceberg", "tansu-schema/iceberg"]
libsql = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-broker/libsql", "tansu-cli/libsql", "tansu-storage/libsql"]
parquet = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-cli/parquet", "tansu-schema/parquet"]
postgres = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-broker/postgres", "tansu-cli/postgres", "tansu-storage/postgres"]
turso = ["dep:tansu-broker", "dep:tansu-cli", "dep:tansu-schema", "dep:tansu-storage", "tansu-broker/turso", "tansu-cli/turso", "tansu-storage/turso"]
